[package]
name = "mcp"
version = "0.1.1"
authors = ["Michael Matuzak <mmatuzak@gmail.com>"]
description = "copy multiple files"
homepage = "https://github.com/emkay/mcp"
readme = "README.md"
keywords = [ "copy", "files", "cp", "mcp" ]
license = "MIT"

[[bin]]
name = "mcp"

[dependencies]
clap = "2.31.1"
